--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chart.js": "^3.5.1",
     "connect-pg-simple": "^7.0.0",
     "consign": "^0.1.6",
     "cookie-parser": "^1.4.5",
